# Flash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  performance-report.sh  test-flash.sh  test-glob-patterns.sh  validate-performance.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benches/: file_watcher.rs
scripts/: benchmark.sh  coverage.sh
src/: bench.rs  bench_results.rs  cli.rs  config.rs  filter.rs  lib.rs  main.rs  runner.rs  stats.rs  watcher.rs
tests/: bench_results.rs  cli.rs  cli_args.rs  command_runner.rs  config.rs  directory_filtering.rs  integration_test.rs  main_cli.rs  main_logic.rs  main_stats.rs  main_watcher.rs  path_filtering.rs  stats_module.rs  watching.rs
tests/common/: mod.rs
