[package]
name = "flash-watcher"
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
authors = ["Brayden Moon <crazywolf132@gmail.com>"]
description = "A fast, predictable file watcher that runs commands when files change."
license = "MIT"
repository = "https://github.com/sage-scm/Flash"
homepage = "https://github.com/sage-scm/Flash"
documentation = "https://docs.rs/flash-watcher"
readme = "README.md"
keywords = ["file-watcher", "cli", "development", "automation", "watch"]
categories = ["command-line-utilities", "development-tools", "filesystem"]

[lib]
name = "flash_watcher"
path = "src/lib.rs"

[[bin]]
name = "flash-watcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
globset = "0.4"
notify = "8.0"
notify-debouncer-mini = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.30"
tempfile = "3"

[features]
default = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.coverage]
exclude = ["src/main.rs"]
